--- a/templates/publicaciones.html
+++ b/templates/publicaciones.html
@@ -6,38 +6,30 @@
 
 <!--Card con la publicaciom-->
   <h2>Publicaciones</h2>  
-  <div class="card">
-    <div class="card-header">
-      Fecha
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">Publicaciones</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Leer mas</a>
-    </div>
-  </div>
-  <!--Card con la publicaciom-->
 
-  <div class="card">
-    <div class="card-header">
-      Fecha
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">Publicaciones</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Leer mas</a>
-    </div>
+
+{% for publicacion in publicaciones %}
+
+<div class="card">
+  <div class="card-header">
+   {{publicacion.fecha}}
   </div>
-<!--Card con la publicaciom-->
-  <div class="card">
-    <div class="card-header">
-      Fecha
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">Publicaciones</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Leer mas</a>
-    </div>
+  <div class="card-body">
+    <h5 class="card-title">{{publicacion.titulo}}</h5>
+    <p class="card-text">{{publicacion.cuerpo}}</p>
+    <a href="#" class="btn btn-primary">Leer mas</a>
   </div>
+</div>
+
+
+
+
+
+{% endfor %}
+  
+
+
+
+
 {% endblock contenido %}
     
